# django-formidable-color-picker

./: README.md  setup.cfg
formidable_color_picker/: __init__.py  apps.py  serializers.py
