[metadata]
name = formidable_color_picker
description = Load an external "color picker" field into formidable
version = 0.0.0
author = peopledoc
author_email = someone@people-doc.com
url = https://example.com
long_description = file: README.md
long_description_content_type = text/markdown
keywords = formidable
license = Closed source
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    django-formidable

[options.extras_require]
dev =

test =
    pytest

[bdist_wheel]
universal = 1
